hphp/test/zend/bad/ext/posix/tests/posix_errno_basic.php
<?php

echo "*** Test by calling method or function with its expected arguments ***\n";

// test without any error
var_dump(posix_errno());

?>